RESOLVED FIXED100133
[Texmap] Fix drawTextureRectangleARB after r131485.
https://bugs.webkit.org/show_bug.cgi?id=100133
Summary [Texmap] Fix drawTextureRectangleARB after r131485.
Zeno Albisser
Reported 2012-10-23 09:10:10 PDT
[Texmap] Fix drawTextureRectangleARB after r131485.
Attachments
Patch (3.70 KB, patch)
2012-10-23 09:12 PDT, Zeno Albisser
no flags
Zeno Albisser
Comment 1 2012-10-23 09:12:44 PDT
Zeno Albisser
Comment 2 2012-10-23 09:40:47 PDT
Comment on attachment 170178 [details] Patch Clearing flags on attachment: 170178 Committed r132232: <http://trac.webkit.org/changeset/132232>
Zeno Albisser
Comment 3 2012-10-23 09:40:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.