[Texmap] Fix drawTextureRectangleARB after r131485. https://bugs.webkit.org/show_bug.cgi?id=100133

Consistently rename u_textureSize to u_samplerSize.

Reviewed by Noam Rosenthal.

* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::TextureMapperGL::drawTextureRectangleARB):
* platform/graphics/texmap/TextureMapperShaderManager.cpp:
(WebCore::getShaderSpec):
* platform/graphics/texmap/TextureMapperShaderManager.h:
(TextureMapperShaderProgram):

Canonical link: https://commits.webkit.org/118151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132232 268f45cc-cd09-0410-ab3c-d52691b4dbfc